task(deployment): added files for app and keycloak deployement
